src/test/ui/type-check/issue-40294.stderr
error[E0283]: type annotations required: cannot resolve `&'a T: Foo`
  --> $DIR/issue-40294.rs:15:1
   |
15 | / fn foo<'a,'b,T>(x: &'a T, y: &'b T) //~ ERROR type annotations required
16 | |     where &'a T : Foo,
17 | |           &'b T : Foo
18 | | {
19 | |     x.foo();
20 | |     y.foo();
21 | | }
   | |_^
   |
note: required by `Foo`
  --> $DIR/issue-40294.rs:11:1
   |
11 | trait Foo: Sized {
   | ^^^^^^^^^^^^^^^^

error: aborting due to previous error

